# vflora

./: .gitignore  README.md  environment.yml  glue_high_round_monitoring.ipynb  pyproject.toml  requirements-train.txt  requirements.txt
docs/: DATA.md  METHODS.md  NEW_REPO_PLAN.md  REPLICATION.md  REWRITE_EXTRACTION_PLAN.md  SLURM.md
references/runs/: 2026-06-12-qnli-e20r150-vflora-smoke.md  index.md
scripts/: prepare_glue_splits.sh  run_epoch_round_tuning.slurm  run_vflora_examples.slurm  smoke_train.slurm  submit_qnli_e20r150_pipeline.sh  submit_qnli_e20r30_pipeline.sh  submit_roberta_glue_pipeline.sh
src/fed_adapter/: __init__.py  aggregation.py  client.py  config.py  distillation.py  selection.py
src/fed_adapter/adapters/: __init__.py  base.py  ffa.py  flora.py  residual.py  rolora.py
src/fed_adapter/analysis/: __init__.py  tuning.py
src/fed_adapter/cli/: __init__.py  generate_manifest.py  split_data.py  train.py  train_glue.py
src/fed_adapter/data/: __init__.py  prompting.py  schema.py  splits.py
tests/: test_aggregation.py  test_cli.py  test_ffa.py  test_glue_metrics.py  test_prompting.py  test_rolora.py  test_schema.py  test_selection.py  test_splits.py  test_tuning_analysis.py
tuning_manifests/: roberta_qnli_stratified_flora_ffa_rank4_seed0_e20_r30.tsv  tinyllama_example.tsv
