[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vflora"
version = "0.1.0"
description = "Federated fine-tuning of LoRA variants"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Tran Trieu Vy"}]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
